# Stocks-Influx-ETL

./: compose.yaml  pyproject.toml  requirements.txt  tasks.py
src/: Dockerfile
src/etl_microservice/: __main__.py  app.py  database.py  etl.py
